// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders comments 1`] = `
<ul
  className="issue-detail__comments"
>
  <li
    key="1"
  >
    <IssueComment
      comment={
        Object {
          "body": "a comment",
          "id": 1,
          "user": Object {
            "avatar_url": "http://foo",
            "login": "somebody",
          },
        }
      }
    />
  </li>
  <li
    key="2"
  >
    <IssueComment
      comment={
        Object {
          "body": "a comment",
          "id": 2,
          "user": Object {
            "avatar_url": "http://foo",
            "login": "somebody",
          },
        }
      }
    />
  </li>
</ul>
`;

exports[`renders with no comments 1`] = `
<ul
  className="issue-detail__comments"
/>
`;

exports[`test renders comments 1`] = `
<ul
  className="issue-detail__comments">
  <li>
    <IssueComment
      comment={
        Object {
          "body": "a comment",
          "id": 1,
          "user": Object {
            "avatar_url": "http://foo",
            "login": "somebody",
          },
        }
      } />
  </li>
  <li>
    <IssueComment
      comment={
        Object {
          "body": "a comment",
          "id": 2,
          "user": Object {
            "avatar_url": "http://foo",
            "login": "somebody",
          },
        }
      } />
  </li>
</ul>
`;

exports[`test renders with no comments 1`] = `
<ul
  className="issue-detail__comments" />
`;
